Start Swagger refactoring
